2008-04-02	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    Added GPLv2 header to each file and converted tabs to spaces

2008-04-02	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * src/libcapuchin/Downloaders/AbstractDownloader.cs:
    * src/libcapuchin/AppObjectManager.cs:
    * src/libcapuchin/AppObject.cs:
    Made AppObject.Update a blocking call.

2008-04-02	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * src/libcapuchin/Downloaders/HttpDownloader.cs:
    Fixed null pointer exception when Content-Disposition
    isn't available

2008-03-29	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * src/libcapuchin/Downloaders/HttpDownloader.cs:
    Added support for Content-Disposition

2008-03-18	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * src/libcapuchin/AppObjectManager.cs:
    Strip bad characters from object path    

2008-03-18	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * src/libcapuchin/Installation/Simple/SimpleInstaller.cs:
    Fixed bug that downloaded file will be deleted even if
    it's no archive

2008-03-17	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * configure.ac:
    Post release bump to 0.3.1

========== Version 0.3.0 released 2008-03-16 ==========

2007-10-17	Sebastian Pölsterl	<sebp@cvs.gnome.org>

   * src/libcapuchin/AppObject.cs:
   Added GetApplicationName method

2007-10-17	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * examples/testapp.cs:
    * src/libcapuchin/AppObject.cs:
    GetAvailablePlugins returns just id and name for each plugin.
    GetAvailableUpdates just returns a list of plugin ids.
    Added GetDescription and GetChanges methods.

2007-10-17	Sebastian Pölsterl	<sebp@cvs.gnome.org>

    * examples/testapp.cs
    * src/libcapuchin/DownloadManager.cs
    * src/libcapuchin/AppObject.cs:
    Show download status when downloading repository's XML file
    Changed name of Refresh method to Update
    Changed name of Update method to Install
    Changed name of event Updated to InstallFinished